[project]
name = "weekend-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.2.0",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "markitdown>=0.1.6",
    "python-dotenv>=1.2.2",
]
